Mejora de gráficador y método bisección